<resources>
    <string name="app_name">Time To Share</string>
    <string name="add">+</string>
    <string name="channel_name">NotifTTS</string>
    <string name="channel_description">NotifyTTS</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id rhoncus nibh, nec pharetra magna.</string>

    <plurals name="member">
        <item quantity="one">1 membre</item>
        <item quantity="other">%1s membres</item>
    </plurals>

    <string name="textWithoutGroup">Ajouter un nouveau groupe</string>

    <string-array name="repetition">
        <item>1 jour</item>
        <item>3 jours</item>
        <item>5 jours</item>
        <item>1 semaine</item>
        <item>2 semaines</item>
    </string-array>

    <string-array name="textAlea">
        <item>Bonjour à tous, tout se passe super bien, des bisous !</item>
        <item>Heyy, j'espère que vous ça va, moi c'est l'éclate ici !</item>
        <item>Salut salut, compliqué en ce moment, beaucoup de travail.. Des bisous</item>
        <item>Salut! Regardez ces photos de mon voyage elles sont top ! </item>
        <item>Bonjour, je passe un très bon moment avec mes amis, des bisous !</item>
    </string-array>

    <string name="groupName">Nom du groupe</string>
    <string name="dateDepart">Date départ</string>
    <string name="dateRetour">Date retour</string>
    <string name="separateurDate">-</string>
    <string name="repeterTout">Notifications : </string>

    <string name="erreurNomGroupe">Nom de groupe nécessaire</string>
    <string name="erreurNoDate">Date de départ et retour nécessaire</string>
    <string name="erreurDateDepartRetour">Date de départ doit être avant la date de retour</string>
    <string name="erreurContact">Contact obligatoire</string>
    <string name="popup_title_permission_files_access">Request for accessing gallery.</string>
    <string name="toast_title_no_image_chosen">No image chosen.</string>



</resources>